--- a/ELibraryManagement/Site1.Master
+++ b/ELibraryManagement/Site1.Master
@@ -13,6 +13,7 @@
     <script src="BootStrap/js/jquery-3.3.1.slim.min.js"></script>
     <script src="BootStrap/js/popper.min.js"></script>
     <script src="BootStrap/js/bootstrap.min.js"></script>
+    <script src="Datatables/js/dataTables.min.js"></script>
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
 </head>
@@ -58,7 +59,7 @@
                         </li>
 
                         <li class="nav-item active">
-                            <asp:LinkButton class="nav-link" ID="LinkButton7" runat="server" Visible="false">Hello user</asp:LinkButton>
+                            <asp:LinkButton class="nav-link" ID="LinkButton7" runat="server" Visible="false" OnClick="LinkButton7_Click">Hello user</asp:LinkButton>
 
                         </li>
                     </ul>
